--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "/src/app.ts",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/server.ts",
+    "dev": "tsx src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js"
   },
