--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
   "main": "/src/app.ts",
   "type": "module",
   "scripts": {
+    "start": "set NODE_ENV=development&& node ./dist/server.js",
+    "prod": "set NODE_ENV=production&& node ./dist/server.js",
     "dev": "tsx src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "config": "^4.1.1",
+    "express": "^4.18.2",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
+    "@types/config": "^3.3.5",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.19",
+    "@types/node": "^20.19.24",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3"
   }
 }
