--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "set NODE_ENV=development&& node ./dist/server.js",
     "prod": "set NODE_ENV=production&& node ./dist/server.js",
-    "dev": "set NODE_ENV=production&& tsx src/server.ts",
+    "dev": "set NODE_ENV=development&& tsx src/server.ts",
     "build": "tsc"
   },
   "dependencies": {
