--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "config": "^4.1.1",
     "express": "^4.18.2",
+    "oracledb": "^6.10.0",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2"
   },
@@ -22,6 +23,7 @@
     "@types/config": "^3.3.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.19.24",
+    "@types/oracledb": "^6.10.0",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
